# health_tracker

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  MIGRATION.md  README.md  cliff.toml  hk.pkl  mise.toml  opencode.json  prompt.md  release-please-config.json  rust-toolchain.toml
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
.sqlx/: query-022972c0c8cd6600387cafac8ec6dfd5a7282c2b6acde98dcaf702804226a1a8.json  query-083208379739c2912210a9f124562d5d15f270a26563ce159662c6257dccab38.json  query-0ce7d8e951e3c385068b9a452e84911378c870c00b263f2868e25a24bf8fc7e4.json  query-0fd9dc580ef2d757ea4717a8ecf0571cdf8b5d919d5032cb47d441833189b29e.json  query-1254c2c78c34a62a29c8af9cf8df0fb90a16801b18b987b1b2002176c16a2649.json  query-1907e3708a106c4b7a2b42035e85fef2fcfa39405a802f95324489e3a51093fe.json  query-1fff4afb44e44cdad8a0c5fafe091160cd514535983292be8df9624919d63ddc.json  query-23036ba0b555b50981ea782933ad7b8752802bf73eb23664ca2b7deeda52ae18.json  query-2ad09da05a8d63bbeeb61c1203c06777264c9cf0473ed2cfd6533740aa415483.json  query-31588367285642c7f637f96f413ee280967de7fab87396eaa4ac5ef57c2e13e5.json  query-362a4eec1d6abc0448ab112306c6383ca09e74b62ad76bc6cd1d896fbf3fdeb1.json  query-379588aa8d03f80c170423ef1f55bbcefe6bb4b9fbdb3b9164e089096c6fa789.json  query-37facb5729dbae699647741208c9d5a4dc1130c43561afcb6d9284e87f1741a6.json  query-39fdde5082c8b9c0e61c690b036e6da8eb07c4a047c7f945af4d9ddaebda4c67.json  query-3b8456a01fab4b74b3a6f32f58717c4240ebf151923339dc4961798cc203477b.json  query-3e4cf10c2f671e7f64e1b37d8426806e65177e4cac08f3299dd311e5d2e7489e.json  query-442487b3b2350690f01b58be8e43980c060a17c08c0aa944703fd5e65c67a768.json  query-45601b27b18e426109beeab0a71231b61b69dba336c44dbccc29d11b31b0ff12.json  query-4a2a44b17c12a2f47f7ebae574da99430354fbc61a91beb101b64ce9480db972.json  query-4d81e4a2f57507580685c49dfe04ba6e90adc8e258be7bb445336fc9fee20ee1.json  query-54344da3d4921a7b4ac440da84071916ad7bb1d07c8adfa30a1b1e4d06410a4a.json  query-5f19db232dc830ff64156c564161570eda84a5f029f26b4baddc0cfbcab503b6.json  query-6450406d81e1cc4cf857c891c15bec3b641aee92f7074654f051518ab1b354f6.json  query-67dcb940604a64054a2bfc9ee415ddfa6e2488fc496cb21bf3f81b8471731db9.json  query-6ef965e8467ac95fc8203bdcf62b497811cbe52fead469f67174afc0a90fe62e.json  query-7362c483bd659ef429f8a321b064a9a2b4ad61bdf8c86833bde408aad89aee5a.json  query-7640efadd4ddaeccfb14d9905aac0153160a05ed378d6e8f91fba82280555d04.json  query-81cd3795376d4b45df87b43302c4d928b564c4f4ab0a2f3594fa290d35a3e5b9.json  query-86c7d6f6edae3f51561e4b33f26e90ea60adb0ab7100285da00ed6b180199b7b.json  query-87efedcf243b2aa4246e0ec53a660461624e93890406bbe96dddb326f6c89b75.json  query-8984fb517d394b57fdb7d73604d697bd7ab3be94591b1ec8b37d517fa2e92a7c.json  query-8d192d21c80fc65c825e6c1d4506953a3adc57b18449a44a36714c378a635cef.json  query-9038c30502e9558b47b8ce5901b2a033bbe47e4d21795e265168e1b015be51b1.json  query-91cc34ee92a14f3cd13202f39163e36738aaf2455154fe57cbaa901e21420e0c.json  query-95f74e042c9c800a8ef9c6eea5bfc8678b963107eb32bc8357bb5081c79da167.json  query-9645ed8ce2935adebb509ac0b6d673adb65c8216b8227bee84987b3bfab0bbb1.json  query-9b9003a72020f92f608ef509cae4b8e2813b6c99a91519f996431c316e304e65.json  query-9c12caa3f1bfc28ca2882ccd61228f57b85a606f11f8054b2eeadd5978b29211.json  query-9dd064314444f42c03a31f0e7c987309c2ce4592e69d4d7c536bd9da9d8d4221.json  query-a48a549867ad18b41b95b15613a601e1b5b7ecda12993ce3b646db0ac5095ba5.json  (+20 more)
config/: default.toml
crates/auth/: Cargo.toml
crates/auth/src/: flow.rs  lib.rs  oidc.rs  session.rs
crates/bot/: Cargo.toml
crates/bot/src/: api_client.rs  gpx.rs  lib.rs  main.rs  matrix_auth.rs  matrix_client.rs
crates/bot/tests/: api_client.rs  process_gpx.rs
crates/bot/tests/fixtures/: heartrate.json  run.gpx
crates/core/: Cargo.toml
crates/core/src/: duration_ext.rs  lib.rs
crates/db/: Cargo.toml
crates/db/examples/: migrate_check.rs
crates/db/src/: error.rs  lib.rs  migrate.rs  repo.rs  traits.rs
crates/db/tests/: repo_integration.rs
crates/web/: Cargo.toml
crates/web/src/: config.rs  error.rs  main.rs  state.rs
crates/web/src/middleware/: bearer.rs  mod.rs  session.rs
crates/web/src/routes/: auth.rs  core.rs  heartrate.rs  mod.rs  openapi.rs  running.rs  runs.rs  sessions.rs  tokens.rs  weight.rs
crates/web/src/tests/: mod.rs
docs/: base.md
frontend/: eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: app.tsx  index.css  main.tsx  types.ts
frontend/src/components/: calendar-heatmap.tsx  exercise-input.tsx  login-page.tsx  running-distance-chart.tsx  running-pace-chart.tsx  session-list.tsx  stopwatch.tsx  weight-chart.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/lib/: api.ts
migrations/: 0003_create_exercise_sessions.down.sql  0003_create_exercise_sessions.up.sql  0004_create_weight_exercises.down.sql  0004_create_weight_exercises.up.sql  0005_create_running_sessions.down.sql  0005_create_running_sessions.up.sql  0006_create_core_exercises.down.sql  0006_create_core_exercises.up.sql  0007_create_heartrate_samples.down.sql  0007_create_heartrate_samples.up.sql  0008_add_custom_kind_and_quality.up.sql  0008_create_api_tokens.up.sql  0009_alter_exercise_tables.down.sql  0009_alter_exercise_tables.up.sql  0010_add_custom_kind_and_quality.down.sql  0010_add_custom_kind_and_quality.up.sql  0011_change_quality_to_1_5.down.sql  0011_change_quality_to_1_5.up.sql  0012_refine_child_exercises.down.sql  0012_refine_child_exercises.up.sql
migrations/0001_create_users/: up.sql
migrations/0002_create_oidc_state/: down.sql  up.sql
migrations/0004_create_weight_exercises/: down.sql
migrations/0007_create_heartrate_samples/: up.sql
migrations/0008_create_api_tokens/: down.sql
tools/: ensure-debug-database.sh  regenerate-sqlx.sh  release-tag.sh
tools/checks/: check-migrations.sh
