[package]
name = "health-auth"
description = "OIDC PKCE flow + session-token logic for health_tracker (framework-agnostic)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
health-core  = { workspace = true }
health-db    = { workspace = true }
openidconnect = { workspace = true }
reqwest      = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
tracing      = { workspace = true }
cookie       = { workspace = true }
time         = { workspace = true }

[lints]
workspace = true