[package]
name = "health-bot"
description = "Matrix bot: receives GPX/heartbeat files, POSTs to the health_tracker web API."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "health-bot"
path = "src/main.rs"

[dependencies]
health-core   = { workspace = true }
matrix-sdk    = { workspace = true }
gpx           = { workspace = true }
haversine-rs  = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
anyhow       = { workspace = true }
thiserror   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
time          = { workspace = true }
regex        = { version = "1.11", optional = true }
toml         = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }

[lints]
workspace = true