[package]
name = "health-bot"
description = "Matrix bot: listens for GPX files, POSTs to the health_tracker web API."
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "health_bot"
path = "src/lib.rs"

[[bin]]
name = "health-bot"
path = "src/main.rs"

[dependencies]
health-core   = { workspace = true }
matrix-sdk    = { workspace = true }
gpx           = { workspace = true }
haversine-rs  = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
anyhow       = { workspace = true }
thiserror   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
time          = { workspace = true }
toml         = { workspace = true }
config       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
mockall      = { workspace = true }
wiremock     = { workspace = true }

[lints]
workspace = true