[package]
name = "health-core"
description = "Domain types for the health_tracker workspace — zero framework dependencies."
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
time        = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }
utoipa      = { workspace = true, features = ["chrono", "uuid"] }

[dev-dependencies]
# (no extra deps yet — pure unit tests)

[lints]
workspace = true