[package]
name = "health-db"
description = "SQLx repository implementations + migrations for health_tracker."
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
health-core  = { workspace = true }
sqlx         = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
tracing      = { workspace = true }
sha2         = { workspace = true }
rand         = { workspace = true }
hex          = { workspace = true }

[dev-dependencies]
tokio        = { workspace = true }
health-core  = { workspace = true }

[lints]
workspace = true