[package]
name = "health-web"
description = "axum web server: OIDC routes, CRUD endpoints, static file serving, bot token API."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "health-web"
path = "src/main.rs"

[dependencies]
health-core   = { workspace = true }
health-db     = { workspace = true }
health-auth   = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
thiserror   = { workspace = true }
anyhow       = { workspace = true }
toml         = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest      = { workspace = true }
config       = { workspace = true }
cookie       = { workspace = true }
sqlx         = { workspace = true }
gpx          = { workspace = true }
haversine-rs = { workspace = true }
mockall      = { workspace = true }
hex          = { workspace = true }
time         = { workspace = true }
utoipa       = { workspace = true, features = ["axum_extras", "chrono", "uuid"] }

[dev-dependencies]
tower        = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }

[lints]
workspace = true